--- a/index.html
+++ b/index.html
@@ -18,8 +18,25 @@
 
         </fieldset>
     </form>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/api.js"></script>
+    <script>
+        $("document").ready(function () {
+            $("#btn_submit").click(function () {
+                var peso = parseFloat($("#inp_peso").val());
+                var altura = parseFloat($("#inp_altura").val());
+        
+                $ajax({
+                    url: "https://0rakul0.pythonanywhere.com/api",
+                    method: "POST",
+                    contentType: "application/json",
+                    data: JSON.stringify({
+                        "peso": peso,
+                        "altura": altura
+                    }).done(function (data) {
+                        $("h1").html("IMC: " + data["imc"]);
+                    })
+                })
+            });
+        });
+    </script>
 </body>
 </html>
